2021-10-20  John M Mellor-Crummey  <johnmc@rice.edu>

	* dwarf_linecontext.c: New file.
	* dwarf_linefunctionname.c: Likewise.
	* Makefile.am (libdw_a_SOURCES): Add dwarf_linecontext.c and
	dwarf_linefunctionname.c
	* dwarf.h: Add DW_LNE_NVIDIA_inlined_call and
	DW_LNE_NVIDIA_set_function_name.
	* dwarf_getsrclines.c (struct line_state): Add context and
	function_name fields.
	(add_new_line): Set context and function_name.
	(MAX_STACK_LINES): Reduce to MAX_STACK_ALLOC / 2.
	(read_srclines): Initialize context and function_name.  Try to
	read debug_str_offset if available.  Handle
	DW_LNE_NVIDIA_inlined_call and DW_LNE_NVIDIA_set_function_name.
	* libdw.h (dwarf_linecontext): New declaration.
	(dwarf_linefunctionname): Likewise.
	* libdw.map (ELFUTILS_0.186): New section.

2021-11-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (scn_dwarf_type): New function.
	(check_section): Check result->type.
	(global_read): First check type.
	(scngrp_read): Likewise.
	* libdw/libdwP.h (enum dwarf_type): New enumeration.
	(struct Dwarf): New field type.

2021-02-14  Alexander Miller  <alex.miller@gmx.de>

	* dwarf_aggregate_size.c (dwarf_aggregate_size): Move NEW_VERSION
	before definition.  Replace INTDEF with NEW_INTDEF.
	* dwarf_srclang.c (dwarf_srclang): Likewise.
	* dwarf_arrayorder.c (dwarf_arrayorder): Move NEW_VERSION.
	* dwarf_bitoffset.c (dwarf_bitoffset): Likewise.
	* dwarf_bitsize.c (dwarf_bitsize): Likewise.
	* dwarf_bytesize.c (dwarf_bytesize): Likewise.
	* dwarf_decl_column.c (dwarf_decl_column): Likewise.

2021-10-18  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (get_type): Don't pass NULL to
	dwarf_peel_type.

2021-10-06  Mark Wielaard  <mark@klomp.org>

	* dwarf_aggregate_size.c (array_size): Check signedness of child DIE
	type. Use dwarf_formsdata or dwarf_formudata to get the lower and
	upper bounds.

2021-09-08  Mark Wielaard  <mark@klomp.org>

	* dwarf_begin_elf.c (valid_p): Identify ELF class and use this to set