@@ -1,3 +1,8 @@
+2022-04-13  Mark Wielaard  <mark@klomp.org>
+
+	* dwarf.h: Add DWARF5 package file section identifiers,
+	DW_SECT_*.
+
 2021-10-20  John M Mellor-Crummey  <johnmc@rice.edu>
 
 	* dwarf_linecontext.c: New file.
